--- a/_posts/2020-09-01-neurips-2020.md
+++ b/_posts/2020-09-01-neurips-2020.md
@@ -1,10 +1,9 @@
 ---
-title: Papers at NeurIPS 2020
-description: X papers of our group members have been accepted at NeurIPS 2020.
-background: /assets/img/neurips-logo.png
+title: Caraml website launch
+description: Welcome to the Caraml group website!
+background: /assets/img/blog-posts/website-launch/caraml-icon.jpg
 author: [CARAML-admin]
-categories: [conference]
+categories: [announcement]
 ---
 
 
-TODO: Replace placeholder content.
